# CPP_MNIST

./: .gitignore  CMakeLists.txt  README.md  job_bashrc  mnist_loader
apps/: testMLP.cpp  trainMLP.cpp
include/: MLP.hpp  layers.cpp  layers.hpp  mnist_loader.hpp  trainer.hpp
scripts/: bld
src/: MLP.cpp  layers.cpp  main.cpp  mnist_loader.cpp  trainer.cpp
